// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PcbToolbar > matches snapshot while idle 1`] = `
<div>
  <div
    class="flex h-9 items-center gap-1 rounded-lg border border-border-default bg-bg-secondary/90 px-2 shadow-lg backdrop-blur-sm"
  >
    <div
      class="flex items-center gap-0.5"
    >
      <button
        aria-label="Select"
        aria-pressed="true"
        class="inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-transparent min-w-8 h-7 w-7 p-0"
        data-slot="tooltip-trigger"
        data-state="closed"
        type="button"
      >
        <svg
          class="lucide lucide-mouse-pointer2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.037 4.688a.495.495 0 0 1 .651-.651l16 6.5a.5.5 0 0 1-.063.947l-6.124 1.58a2 2 0 0 0-1.438 1.435l-1.579 6.126a.5.5 0 0 1-.947.063z"
          />
        </svg>
      </button>
      <button
        aria-label="Route Traces"
        aria-pressed="false"
        class="inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-transparent min-w-8 h-7 w-7 p-0"
        data-slot="tooltip-trigger"
        data-state="closed"
        type="button"
      >
        <svg
          class="lucide lucide-route h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="6"
            cy="19"
            r="3"
          />
          <path
            d="M9 19h8.5a3.5 3.5 0 0 0 0-7h-11a3.5 3.5 0 0 1 0-7H15"
          />
          <circle
            cx="18"
            cy="5"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px mx-1 h-5"
      data-orientation="vertical"
      data-slot="separator"
      role="none"
    />
    <div
      class="flex items-center gap-0.5"
    >
      <button
        aria-label="Undo"
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium cursor-pointer transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 border-border border data-[state=active]:bg-background rounded-md gap-1.5 has-[>svg]:px-2.5 h-7 w-7 p-0"
        data-slot="tooltip-trigger"
        data-state="closed"
        disabled=""
      >
        <svg
          class="lucide lucide-undo2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 14 4 9l5-5"
          />
          <path
            d="M4 9h10.5a5.5 5.5 0 0 1 5.5 5.5a5.5 5.5 0 0 1-5.5 5.5H11"
          />
        </svg>
      </button>
      <button
        aria-label="Redo"
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium cursor-pointer transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 border-border border data-[state=active]:bg-background rounded-md gap-1.5 has-[>svg]:px-2.5 h-7 w-7 p-0"
        data-slot="tooltip-trigger"
        data-state="closed"
        disabled=""
      >
        <svg
          class="lucide lucide-redo2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 14 5-5-5-5"
          />
          <path
            d="M20 9H9.5A5.5 5.5 0 0 0 4 14.5A5.5 5.5 0 0 0 9.5 20H13"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex-1"
    />
    <span
      class="text-xs text-muted-foreground"
    >
      Select
    </span>
  </div>
</div>
`;

exports[`PcbToolbar > matches snapshot while routing and disables undo/redo 1`] = `
<div>
  <div
    class="flex h-9 items-center gap-1 rounded-lg border border-border-default bg-bg-secondary/90 px-2 shadow-lg backdrop-blur-sm"
  >
    <div
      class="flex items-center gap-0.5"
    >
      <button
        aria-label="Select"
        aria-pressed="false"
        class="inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-transparent min-w-8 h-7 w-7 p-0"
        data-slot="tooltip-trigger"
        data-state="closed"
        type="button"
      >
        <svg
          class="lucide lucide-mouse-pointer2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.037 4.688a.495.495 0 0 1 .651-.651l16 6.5a.5.5 0 0 1-.063.947l-6.124 1.58a2 2 0 0 0-1.438 1.435l-1.579 6.126a.5.5 0 0 1-.947.063z"
          />
        </svg>
      </button>
      <button
        aria-label="Route Traces"
        aria-pressed="true"
        class="inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-transparent min-w-8 h-7 w-7 p-0"
        data-slot="tooltip-trigger"
        data-state="closed"
        type="button"
      >
        <svg
          class="lucide lucide-route h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="6"
            cy="19"
            r="3"
          />
          <path
            d="M9 19h8.5a3.5 3.5 0 0 0 0-7h-11a3.5 3.5 0 0 1 0-7H15"
          />
          <circle
            cx="18"
            cy="5"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px mx-1 h-5"
      data-orientation="vertical"
      data-slot="separator"
      role="none"
    />
    <div
      class="flex items-center gap-0.5"
    >
      <button
        aria-label="Undo"
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium cursor-pointer transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 border-border border data-[state=active]:bg-background rounded-md gap-1.5 has-[>svg]:px-2.5 h-7 w-7 p-0"
        data-slot="tooltip-trigger"
        data-state="closed"
        disabled=""
      >
        <svg
          class="lucide lucide-undo2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 14 4 9l5-5"
          />
          <path
            d="M4 9h10.5a5.5 5.5 0 0 1 5.5 5.5a5.5 5.5 0 0 1-5.5 5.5H11"
          />
        </svg>
      </button>
      <button
        aria-label="Redo"
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium cursor-pointer transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 border-border border data-[state=active]:bg-background rounded-md gap-1.5 has-[>svg]:px-2.5 h-7 w-7 p-0"
        data-slot="tooltip-trigger"
        data-state="closed"
        disabled=""
      >
        <svg
          class="lucide lucide-redo2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 14 5-5-5-5"
          />
          <path
            d="M20 9H9.5A5.5 5.5 0 0 0 4 14.5A5.5 5.5 0 0 0 9.5 20H13"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex-1"
    />
    <span
      class="text-xs text-muted-foreground"
    >
      Routing (0.5mm on B.Cu)
    </span>
  </div>
</div>
`;
